# eda_toolkit

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.cfg
eda_toolkit/: basic_data_wrangling.py  date_utils.py  univariate_statistics.py
notebooks/: basic_data_wrangling.ipynb  bivariate_statistics.ipynb  outliers.ipynb  skewness.ipynb  univariate_statistics.ipynb
src/eda_toolkit/: basic_data_wrangling.py  bivariate_statistics.py  date_utils.py  outliers.py  skewness.py  univariate_statistics.py  visualization_bivariate_statistics.py  visualizing_bivariate_statistics.py
src/eda_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/eda_toolkit/utils/: data_loader.py
tests/: conftest.py  test_basic_data_wrangling.py  test_bivariate_statistics.py  test_date_utils.py  test_outliers.py  test_skewness.py  test_univariate_statistics.py  test_visualization_bivariate_statistics.py
