[tool.black]
line-length = 88
target-version = ['py39']  # Or change to 'py310', 'py311', etc., based on your Python version
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


[project]
name = "eda_toolkit"
version = "0.1.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':', conflicts with black
    "W503"   # line break before binary operator, also conflicts with black
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "env",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    ".idea"
]

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring"
]

[tool.pylint.BASIC]
good-names = ["i", "j", "df", "x", "y"]

