[metadata]
name = eda_toolkit
version = 0.1.0
description = A data wrangling and EDA toolkit
author = Your Name
license = MIT

[options]
package_dir =
    = src
packages = find:
include_package_data = true

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
dev =
    pytest
    black
    isort
    flake8

